react-project/src/MainContent/CalenderPage/CalenderPage.css
.CalenderDay{
  margin: -1px;
  border-top: solid black 1px;

  height:500px;
  width: 14.2857%;
}

.show-grid{
  justify-content: center;

}

.Hours{
  height: 30px;
  border-top: solid 1px LightGray;
  text-align: left;
}



#start{
  background-color: LightGreen ;
}
#middle{
  background-color: LightGreen ;
}
#end{
  background-color: LightGreen ;
}

